# qxk24

./: .gitignore  ALAMTOLOGI.md  CMakeLists.txt  README.md
docs/: ADAM.md  BUSINESS_WHITEPAPER.md  CALIPH.md  DEVELOPER_SOP.md  DEVELOPER_WHITEPAPER.md  FAKTOR_MASA.md  FAKTOR_TENAGA.md  FOUNDERS_STATEMENT.md  HOWTO.md  INTEGRATION.md  RELEASE.md  SAINS_ALAMTOLOGI.md  SOVEREIGN.md  WHITEPAPER.md
docs/internal/: ADAM_KNOWLEDGE_PIPELINE.md  ADAM_PHASE12_DATA_MODEL.md  QIUBBX_INTEGRATION_DESIGN.md  QIUBBX_INTEGRATION_STATUS.md
include/qxk24/: qxk24.h
include/qxk24/adam/: qxk24_adam.h  qxk24_adam_adab.h  qxk24_adam_akal.h  qxk24_adam_cv.h  qxk24_adam_hukumz.h  qxk24_adam_ilmu.h  qxk24_adam_knowledge.h  qxk24_adam_session.h
include/qxk24/bridge/: qxk24_qxengine_bridge.h  qxk24_qxengine_health.h
include/qxk24/caliph/: qxk24_caliph.h  qxk24_caliph_command.h  qxk24_caliph_report.h
include/qxk24/flow/: qxk24_oass.h  qxk24_oat.h
include/qxk24/fm/: qxk24_ahli_masa.h  qxk24_fm.h  qxk24_mdk.h  qxk24_mp.h  qxk24_usul_masa.h
include/qxk24/ft/: qxk24_fasa_tenaga.h  qxk24_ft.h  qxk24_jisim.h  qxk24_padanan.h  qxk24_pasata.h  qxk24_putar.h  qxk24_serak.h
include/qxk24/kernel/: qxk24_governor.h  qxk24_health.h  qxk24_report.h
include/qxk24/memloc/: qxk24_memloc_bridge.h
include/qxk24/qiubbx/: qxk24_qiubbx_adapter.h
include/qxk24/resource/: qxk24_memory_qxengine.h  qxk24_resource_base.h
include/qxk24/science/: qxk24_hisal.h  qxk24_izwa.h  qxk24_meta.h  qxk24_rina.h  qxk24_sira.h
include/qxk24/validation/: qxk24_qiubbx.h
platform/: CMakeLists.txt
platform/android/: QXK24.kt  build.gradle  qxk24_jni.c
platform/ios/: QXK24.podspec  QXK24.swift  QXK24Bridge.h  QXK24Bridge.m
src/adam/: qxk24_adam.c  qxk24_adam_adab.c  qxk24_adam_akal.c  qxk24_adam_cv.c  qxk24_adam_hukumz.c  qxk24_adam_ilmu.c  qxk24_adam_knowledge.c  qxk24_adam_session.c
src/ama/: qxk24_ama_pattern.c
src/bridge/: qxk24_qxengine_bridge.c  qxk24_qxengine_health.c
src/caliph/: qxk24_caliph.c  qxk24_caliph_command.c  qxk24_caliph_report.c
src/core/: qxk24_flow.c  qxk24_kernel.c  qxk24_kernel_eval.c  qxk24_kernel_internal.h  qxk24_query.c  qxk24_resource.c
src/direction/: qxk24_direction.c
src/flow/: qxk24_oass.c  qxk24_oat.c
src/fm/: qxk24_ahli_masa.c  qxk24_fm.c  qxk24_mdk.c  qxk24_mp.c  qxk24_usul_masa.c
src/ft/: qxk24_fasa_tenaga.c  qxk24_ft.c  qxk24_jisim.c  qxk24_padanan.c  qxk24_pasata.c  qxk24_putar.c  qxk24_serak.c
src/kernel/: qxk24_governor.c  qxk24_health.c  qxk24_report.c
src/level/: qxk24_levels.c
src/memloc/: qxk24_memloc_bridge.c
src/qiubbx/: qxk24_qiubbx_adapter.c  qxk24_qiubbx_audit.c
src/resource/: qxk24_governors.c  qxk24_memory_qxengine.c  qxk24_resource_base.c
src/science/: qxk24_hisal.c  qxk24_izwa.c  qxk24_meta.c  qxk24_rina.c  qxk24_sira.c
src/validation/: qxk24_qiubbx.c
tests/integration/: test_qxk24_adam_full.cpp  test_qxk24_caliph_kernel.cpp  test_qxk24_full_cycle.cpp  test_qxk24_full_stack.cpp  test_qxk24_qxengine_bridge.cpp  test_qxk24_qxengine_health.cpp
tests/platform/android/: QXK24Test.kt
tests/platform/ios/: QXK24Tests.swift
tests/unit/: test_qxk24_adam.cpp  test_qxk24_adam_adab.cpp  test_qxk24_adam_akal.cpp  test_qxk24_adam_cv.cpp  test_qxk24_adam_hukumz.cpp  test_qxk24_adam_ilmu.cpp  test_qxk24_adam_knowledge.cpp  test_qxk24_adam_session.cpp  test_qxk24_ahli_masa.cpp  test_qxk24_ama.cpp  test_qxk24_caliph.cpp  test_qxk24_fasa.cpp  test_qxk24_flow.cpp  test_qxk24_fm.cpp  test_qxk24_ft.cpp  test_qxk24_governor.cpp  test_qxk24_governors.cpp  test_qxk24_health.cpp  test_qxk24_jisim.cpp  test_qxk24_levels.cpp  test_qxk24_mdk.cpp  test_qxk24_memory_qxengine.cpp  test_qxk24_mp.cpp  test_qxk24_padanan.cpp  test_qxk24_pasata.cpp  test_qxk24_putar.cpp  test_qxk24_qiubbx_adapter.cpp  test_qxk24_qiubbx_adapter_concurrency.cpp  test_qxk24_qiubbx_audit_sync.cpp  test_qxk24_report.cpp  test_qxk24_science.cpp  test_qxk24_serak.cpp  test_qxk24_usul_masa.cpp
tests/validation/: test_qxk24_qiubbx.cpp  test_qxk24_sovereign.cpp
